--- a/templates/partials/footer.ejs
+++ b/templates/partials/footer.ejs
@@ -8,12 +8,8 @@
 
 <link rel="stylesheet" href="/css/footer.css">
 
-<!-- Footer -->
 <footer class="text-lg-start bg-dark text-muted">
-    <!-- Section: Social media -->
-    <!-- Section: Social media -->
 
-    <!-- Section: Links  -->
     <section class="">
         <div class="cont">
 
@@ -22,60 +18,65 @@
                 <div class="companyInfo">
 
                     <div class="one">
-                        <h6 class="text-uppercase">
+                        <h4 class="text-uppercase">
                             <i class="fas fa-gem me-3 text-secondary"></i>Company name
-                        </h6>
-                        <p>
+                        </h4>
+                        <br>
+                        <span>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt omnis delectus excepturi
                             illum, dignissimos repudiandae eligendi tempora nulla? Asperiores, consectetur. Doloribus
                             magnam
                             provident voluptas natus aliquam quae possimus dolorem quam, fugit veniam. Reprehenderit
                             aspernatur, quia cum quam earum ipsum consequatur.
-                        </p>
+                        </span>
                     </div>
 
+                    <br>
+                    <br>
                     <div class="sec">
                         <div class="Links">
 
-                            <h6 class="text-uppercase fw-bold mb-4">
+                            <h5 class="text-uppercase fw-bold mb-4">
                                 Useful links
-                            </h6>
-                            <p>
+                            </h5>
+                            <span>
                                 <a href="/" class="text-reset">Home</a>
-                            </p>
-                            <p>
+                            </span>
+                            <span>
                                 <a href="#" class="text-reset">About Us</a>
-                            </p>
-                            <p>
+                            </span>
+                            <span>
                                 <a href="/contact" class="text-reset">Contact Us</a>
-                            </p>
-                            <p>
+                            </span>
+                            <span>
                                 <a href="/blog" class="text-reset">Blogs</a>
-                            </p>
+                            </span>
                         </div>
 
                         <div class="Links">
 
-                            <h6 class="text-uppercase fw-bold mb-4">
+                            <h5 class="text-uppercase fw-bold mb-4">
                                 Services
-                            </h6>
-                            <p>
+                            </h5>
+                            <span>
                                 <a href="#" class="text-reset">service1</a>
-                            </p>
-                            <p>
+                            </span>
+                            <span>
                                 <a href="#" class="text-reset">service2</a>
-                            </p>
-                            <p>
+                            </span>
+                            <span>
                                 <a href="#" class="text-reset">service3</a>
-                            </p>
-                            <p>
+                            </span>
+                            <span>
                                 <a href="#" class="text-reset">service4</a>
-                            </p>
+                            </span>
                         </div>
                     </div>
 
 
                 </div>
+
+                <br>
 
                 <div class="maps">
 
