--- a/static/css/writeblog.css
+++ b/static/css/writeblog.css
@@ -1,10 +1,20 @@
-.welcome {
-    background: url('https://images.unsplash.com/photo-1513542789411-b6a5d4f31634?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80')no-repeat center center/cover;
+.welcome{background: url(https://images.unsplash.com/photo-1513542789411-b6a5d4f31634?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80)no-repeat center center/cover;
     background-attachment: fixed;
     text-align: center;
     width: 100%;
-    height: 300px;
-    padding: 15rem;
+    height: 75vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media only screen and (max-width:500px){
+    .form{
+        width: 97% !important;
+    }
+    .welcome h2{
+        font-size:3rem !important;
+    }
 }
 
 .welcome h2 {
