--- a/static/css/login.css
+++ b/static/css/login.css
@@ -78,3 +78,10 @@
     border: 2px solid #29bb8a !important;
     color: black;
 }
+
+
+@media only screen and (max-width:400px){
+    .button{
+        width:40%;
+    }
+}
