--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -73,7 +73,14 @@
     width: 70%;
     padding: 10px;
     margin: 10px auto;
-    border-radius: 10px;
     text-align: center;
     font-size: 16px;
+    border: unset;
+    border-bottom: 2px solid black;
+}
+
+@media only screen and (max-width:400px){
+    .button{
+        width:40%;
+    }
 }
