--- a/templates/partials/footer.ejs
+++ b/templates/partials/footer.ejs
@@ -59,17 +59,34 @@
                                 Services
                             </h5>
                             <span>
-                                <a href="#" class="text-reset">service1</a>
+                                <a href="/#blog" class="text-reset">Blog Posts</a>
                             </span>
                             <span>
-                                <a href="#" class="text-reset">service2</a>
+                                <a href="/#website" class="text-reset">Website Content</a>
                             </span>
                             <span>
-                                <a href="#" class="text-reset">service3</a>
+                                <a href="/#tech" class="text-reset">Technical Writing</a>
                             </span>
                             <span>
-                                <a href="#" class="text-reset">service4</a>
+                                <a href="/#press" class="text-reset">Press Releases</a>
                             </span>
+                            <span>
+                                <a href="/#copy" class="text-reset">Copy Writing</a>
+                            </span>
+                            <span>
+                                <a href="/#ebook" class="text-reset">Ebook Writing</a>
+                            </span>
+                            <span>
+                                <a href="/#white" class="text-reset">White Papers</a>
+                            </span>
+                            <span>
+                                <a href="/#email" class="text-reset">Email Newsletter</a>
+                            </span>
+                            <span>
+                                <a href="/#product" class="text-reset">Product Description</a>
+                            </span>
+                            
+                            
                         </div>
                     </div>
 
