--- a/static/css/showblog.css
+++ b/static/css/showblog.css
@@ -158,7 +158,8 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 80vh;;
+    height: 80vh;
+    padding: 1rem;
 }
 
 .title h1 {
