--- a/static/css/index.css
+++ b/static/css/index.css
@@ -35,9 +35,20 @@ body {
     object-fit: cover;
 }
 
+.carousel-item img {
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+}
+
+.carousel {
+    width: 100%;
+    position: unset;
+}
+
 .mainsection {
-    background: url("https://images.unsplash.com/photo-1475669698648-2f144fcaaeb1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80") no-repeat center center/cover;
-    background-attachment: fixed;
+    /* background: url("https://images.unsplash.com/photo-1475669698648-2f144fcaaeb1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80") no-repeat center center/cover;
+    background-attachment: fixed; */
     width: 100%;
     height: 100vh;
     display: flex;
@@ -198,11 +209,12 @@ body {
         width: 350px;
     }
 
-    .left h1{
-        font-size: 25px ;
+    .left h1 {
+        font-size: 25px;
     }
-    .promise .element{
-        width:300px;
+
+    .promise .element {
+        width: 300px;
     }
 }
 
@@ -226,15 +238,16 @@ body {
         padding: 5px;
     }
 
-    #contact{
+    #contact {
         padding: 0;
     }
 
-    .counter-1{
+    .counter-1 {
         width: 40%;
         height: 100px;
     }
-    .counter-1 span{
+
+    .counter-1 span {
         font-size: 20px;
     }
 
@@ -273,19 +286,38 @@ body {
         padding: 2rem;
     }
 
-    .left h1{
+    .left h1 {
         font-size: 20px;
     }
-    .left span{
+
+    .left span {
         font-size: 14px;
     }
 
-    .right .form{
+    .right .form {
         margin: 0;
     }
 
-    #contact .button{
+    #contact .button {
         width: 40% !important;
     }
 
+}
+
+.carousel:before {
+    content: "COMPANY NAME";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    font-size: calc(8vw + 30px);
+    z-index: 10;
+    color: white;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: rgb(0, 0, 0, 0.7);
+    text-align: center;
 }
