--- a/templates/login.ejs
+++ b/templates/login.ejs
@@ -16,7 +16,7 @@
         <div class="mainbody">
             <div class="left">
                 <img class="leftin image"
-                    src="https://preview.colorlib.com/theme/bootstrap/login-form-08/images/undraw_file_sync_ot38.svg"
+                    src="/images/login.jpg"
                     alt="">
             </div>
 
