--- a/templates/signup.ejs
+++ b/templates/signup.ejs
@@ -16,7 +16,7 @@
         <div class="mainbody">
             <div class="left">
                 <img class="leftin image"
-                    src="https://preview.colorlib.com/theme/bootstrap/login-form-07/images/undraw_remotely_2j6y.svg"
+                    src="/images/signup.jpg"
                     alt="">
             </div>
 
