--- a/static/css/index.css
+++ b/static/css/index.css
@@ -47,8 +47,6 @@ body {
 }
 
 .mainsection {
-    /* background: url("https://images.unsplash.com/photo-1475669698648-2f144fcaaeb1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80") no-repeat center center/cover;
-    background-attachment: fixed; */
     width: 100%;
     height: 100vh;
     display: flex;
@@ -80,7 +78,7 @@ body {
     margin: 20px auto 0;
     padding: 2rem 5rem;
     /* border: 2px solid red; */
-    background: url("https://img.freepik.com/free-photo/pastel-blue-vignette-concrete-textured-background_53876-102637.jpg?size=626&ext=jpg")no-repeat center center/cover;
+    background: url("/images/service.jgp")no-repeat center center/cover;
     background-attachment: fixed;
 }
 
