--- a/static/css/showblog.css
+++ b/static/css/showblog.css
@@ -152,7 +152,7 @@ img {
 }
 
 .title {
-    background: url(https://images.unsplash.com/photo-1615715757401-f30e7b27b912?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8MXwxMTI1NDUzfHxlbnwwfHx8fA%3D%3D&w=1000&q=80) no-repeat center center/cover;
+    background: url("/images/showblogbg.jpg") no-repeat center center/cover;
     background-attachment: fixed;
     width: 100%;
     display: flex;
