--- a/static/css/writeblog.css
+++ b/static/css/writeblog.css
@@ -1,4 +1,4 @@
-.welcome{background: url(https://images.unsplash.com/photo-1513542789411-b6a5d4f31634?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80)no-repeat center center/cover;
+.welcome{background: url("/images/writeblog.jpg")no-repeat center center/cover;
     background-attachment: fixed;
     text-align: center;
     width: 100%;
