--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -29,28 +29,28 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img class="d-block w-100"
-                        src="https://images.unsplash.com/photo-1475669698648-2f144fcaaeb1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
+                        src="/images/main1.jpg"
                         alt="First slide">
                 </div>
                 
                 <div class="carousel-item">
                     <img class="d-block w-100"
-                        src="https://images.pexels.com/photos/2272176/pexels-photo-2272176.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                        src="/images/main2.jpg"
                         alt="Third slide">
                 </div>
                 <div class="carousel-item">
                     <img class="d-block w-100"
-                        src="https://images.pexels.com/photos/1910225/pexels-photo-1910225.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                        src="/images/main3.jpg"
                         alt="Second slide">
                 </div>
                 <div class="carousel-item">
                     <img class="d-block w-100"
-                        src="https://images.pexels.com/photos/547114/pexels-photo-547114.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                        src="/images/main4.jpg"
                         alt="Third slide">
                 </div>
                 <div class="carousel-item">
                     <img class="d-block w-100"
-                        src="https://images.pexels.com/photos/1781710/pexels-photo-1781710.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                        src="/images/main5.jpg"
                         alt="Third slide">
                 </div>
             </div>
@@ -63,7 +63,6 @@
                 <span class="sr-only">Next</span>
             </a> -->
         </div>
-        <!-- <article>COMPANY NAME</article> -->
     </div>
     <%- include("partials/navbar.ejs") %>
 
