--- a/templates/login.ejs
+++ b/templates/login.ejs
@@ -16,7 +16,7 @@
         <div class="mainbody">
             <div class="left">
                 <img class="leftin image"
-                    src="/images/login.jpg"
+                    src="/images/login.png"
                     alt="">
             </div>
 
