--- a/templates/blogs.ejs
+++ b/templates/blogs.ejs
@@ -9,12 +9,28 @@
     <link rel="stylesheet" href="/css/blog.css">
 </head>
 
+<style>
+    .conti{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    .conti h1{
+        font-size: 6rem;
+    }
+</style>
+
 <body>
 
     <%- include("partials/navbar.ejs") %>
         <div class="conti">
-            <a class="create" href="/blog/create"><button class="btn btned">Write A Blog</button></a>
+            <% if(admin) {%>
+                <a class="create" href="/blog/create"><button class="btn btned">Write A Blog</button></a>
+                <%}%>
+                <h1>Blogs</h1>
         </div>
+
 
 
         <div class="contain">
