--- a/templates/partials/footer.ejs
+++ b/templates/partials/footer.ejs
@@ -95,13 +95,13 @@
 
                 <br>
 
-                <div class="maps">
+                <!-- <div class="maps">
 
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3391.819824640186!2d76.98388601497369!3d31.775399781286016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3904e36054b1fd81%3A0xc3174a90dec9f339!2sIndian%20Institute%20Of%20Technology%E2%80%93Mandi%20(IIT%E2%80%93Mandi)!5e0!3m2!1sen!2sin!4v1675524712878!5m2!1sen!2sin"
                         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
+                        referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+                <!-- </div> -->
 
             </div>
         </div>
