purchase section added

--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -117,3 +117,13 @@
         font-size: 1.5rem !important;
     }
 }
+
+.conti{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.conti h1{
+    font-size: 6rem;
+}
