--- a/templates/editpaidblog.ejs
+++ b/templates/editpaidblog.ejs
@@ -20,31 +20,21 @@
             </h2>
         </div>
 
-
-        <form class="form" action="/blog/create" method="post">
-            <input class="text1 com" type="text" required name="title" placeholder="Write Your Title">
-            <input class="text1 com" type="text" name="tag" placeholder="Enter A Tag">
-            
-            <!-- <div class="button" style="width: 80%; margin: auto;">
-                <button id="upbtn" type="button" class="btn btn1 btn-primary" data-toggle="modal" data-target="#upload">
-                    Upload Image
-                </button>
-                <input type="hidden" name="image" id="imageupload">
-            </div> -->
-            <textarea class="text1 com" name="description" id="" placeholder="Write Your Description"></textarea>
-            <textarea class="text2 com " id="textarea" name="markdown" id="markdown" placeholder="Write Your Markdown"></textarea>
-            
-            <input class="text1 com" type="number" name="amount" placeholder="Enter Amount">
+        <form class="form" action="/blog/edit/paid/<%= blog.id %>?_method=PUT" method="post">
+            <input class="text1 com" type="text" value="<%=blog.title%>" required name="title"
+                placeholder="Write Your Title">
+            <input class="text1 com" type="number" value="<%=blog.amount%>" name="amount" placeholder="Write Amount">
+            <textarea class="text1 com" type="text" name="description" id=""
+                placeholder="Write Your Description"><%=blog.description%></textarea>
+            <textarea class="text2 com " id="textarea" name="markdown"><%-blog.markdown%></textarea>
+            <!-- <input class="text1 com" type="number" name="amount" placeholder="Enter Amount"> -->
             <label for="paid">Paid or Not</label>
-            <input type="checkbox" name="paid" id="paid">
+            <input type="checkbox" name="paid" id="paid" checked>
             <div style="width: 100% ; margin: auto;" class="button-control com1">
                 <button class="btn btn3">Submit</button>
                 <button class="btn btn2" onclick="location.assign('/blog')">Cancel</button>
             </div>
-
         </form>
-
-
         <!-- <div class="modal fade" id="upload" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
             aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
