--- a/templates/partials/navbar.ejs
+++ b/templates/partials/navbar.ejs
@@ -23,6 +23,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/blog">Blogs</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/blog/buy">Purchase</a>
+            </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
