--- a/templates/partials/navbar.ejs
+++ b/templates/partials/navbar.ejs
@@ -24,7 +24,7 @@
                 <a class="nav-link" href="/blog">Blogs</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/blog/buy">Purchase</a>
+                <a class="nav-link" href="/blog/paid/buy">Purchase</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
