--- a/templates/buyblog.ejs
+++ b/templates/buyblog.ejs
@@ -39,7 +39,7 @@
                                             <div class="button-control">
                                                 <a class="btn btn1" href="/blog/paid/<%=blogs[i]._id%>">ReadMore</a>
                                                 <% if(admin) {%>
-                                                    <a href="/blog/delete/paid/<%=blogs[i]._id%>" class="btn btn2">Delete</a>
+                                                    <a href="/blog/paid/delete/<%=blogs[i]._id%>" class="btn btn2">Delete</a>
                                                     <%}%>
                                             </div>
                         </div>
