--- a/templates/blogs.ejs
+++ b/templates/blogs.ejs
@@ -20,7 +20,7 @@
             <% if(admin) {%>
                 <a class="create" href="/blog/create"><button class="btn btned">Write A Blog</button></a>
                 <%}%>
-                <h1>Blogs</h1>
+                <h1>Read Our Blogs</h1>
         </div>
 
 
@@ -28,7 +28,7 @@
         <div class="contain">
             <% if(blogs.length) {%>
 
-                <% for(let j=0;j<10;j++) {%>
+                <% for(let j=0;j<7;j++) {%>
 
                     <% for(let i=0;i<blogs.length;i++) {%>
                         <div class="carded">
