--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -11,7 +11,16 @@
 </head>
 
 <style>
-
+.carousel-caption{
+    color: white !important;
+    font-size: 25px;
+}
+.carousel-item{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 </style>
 
 <body>
@@ -28,20 +37,35 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="d-block w-100" src="/images/main1.jpg" alt="First slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, voluptatem.</span>
+                        </div>
+                        <img class="d-block w-100" src="/images/1.png" alt="First slide">
                     </div>
 
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="/images/main2.jpg" alt="Third slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium facilis pariatur ipsam aliquam error culpa minus totam maiores nostrum dolore.</span>
+                        </div>
+                        <img class="d-block w-100" src="/images/2.png" alt="Third slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="/images/main3.jpg" alt="Second slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <span>Lorem ipsum dolor sit amet.</span>
+                        </div>
+                        <img class="d-block w-100" src="/images/3.png" alt="Second slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="/images/main4.jpg" alt="Third slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, iste similique? Minus, a deserunt. Itaque, fugit ullam reiciendis vero maxime repellat magnam deserunt explicabo, vel ipsam maiores ex tempore eius consequatur in expedita quisquam deleniti!</span>
+                        </div>
+                        <img class="d-block w-100" src="/images/4.jpg" alt="Third slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="/images/main5.jpg" alt="Third slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+                        </div>
+                        <img class="d-block w-100" src="/images/5.png" alt="Third slide">
                     </div>
                 </div>
                 <!-- <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
