--- a/templates/partials/navbar.ejs
+++ b/templates/partials/navbar.ejs
@@ -4,7 +4,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/"><img class ="img" src="/images/logo.png" alt=""></a>
+    <a class="navbar-brand" href="/"><img class ="img" src="/images/logo.png" alt="">&nbsp;CONTENT BAZZAR</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -23,9 +23,11 @@
             <li class="nav-item">
                 <a class="nav-link" href="/blog">Blogs</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/blog/paid/buy">Purchase</a>
-            </li>
+            <% if (admin) {%>
+                <li class="nav-item">
+                    <a class="nav-link" href="/blog/paid/buy">Purchase</a>
+                </li>
+                <%}%>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
