--- a/templates/buyblog.ejs
+++ b/templates/buyblog.ejs
@@ -25,7 +25,7 @@
         <div class="contain">
             <% if(blogs.length) {%>
 
-                <% for(let j=0;j<1;j++) {%>
+                <% for(let j=0;j<6;j++) {%>
 
                     <% for(let i=0;i<blogs.length;i++) {%>
                         <div class="carded">
@@ -33,8 +33,16 @@
                                     <h3 class="title info">
                                         <%= blogs[i].title %>
                                     </h3>
+                                            
+                                            <h5 class="description info">
+                                                <span>Posted By- Admin</span>
+                                            </h5>
                                             <h5 class="description info">
                                                 <%= blogs[i].description%>
+                                            </h5>
+                                            <h5 class="description info">
+                                                <span style="color: blue
+                                                ;"><span>Purchase:</span>&nbsp;INR <%=blogs[i].amount %></span>
                                             </h5>
                                             <div class="button-control">
                                                 <a class="btn btn1" href="/blog/paid/<%=blogs[i]._id%>">ReadMore</a>
