--- a/templates/partials/footer.ejs
+++ b/templates/partials/footer.ejs
@@ -6,6 +6,7 @@
     crossorigin="anonymous"></script>
 <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 
+
 <link rel="stylesheet" href="/css/footer.css">
 
 <footer class="text-lg-start bg-dark text-muted">
@@ -19,16 +20,45 @@
 
                     <div class="one">
                         <h4 class="text-uppercase">
-                            <i class="fas fa-gem me-3 text-secondary"></i>Company name
+                            <i class="fas fa-gem me-3 text-secondary"></i>&nbsp;CONTENT BAZZAR
                         </h4>
                         <br>
                         <span>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt omnis delectus excepturi
-                            illum, dignissimos repudiandae eligendi tempora nulla? Asperiores, consectetur. Doloribus
-                            magnam
-                            provident voluptas natus aliquam quae possimus dolorem quam, fugit veniam. Reprehenderit
-                            aspernatur, quia cum quam earum ipsum consequatur.
+                            We’ve crafted our blog to share what we’ve learned working on content marketing projects for thousands of clients. Start reading now to get expert insight on content creation, SEO and content marketing tips, tactics and strategies.
                         </span>
+                        <br><br>
+                        <div class="social">
+                            <a href="#" class="me-4 link-secondary">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                            <a href="#" class="me-4 link-secondary">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                            <a href="#" class="me-4 link-secondary">
+                                <i class="fab fa-google"></i>
+                            </a>
+                            <a href="#" class="me-4 link-secondary">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                            <a href="#" class="me-4 link-secondary">
+                                <i class="fab fa-linkedin"></i>
+                            </a>
+                            <a href="#" class="me-4 link-secondary">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+
+                        <div class="contact">
+                            <h5 class="text-uppercase fw-bold mt-4">
+                                Reach Us
+                            </h5>
+                            <span><span style="color: #007fff;">Address</span>:&nbsp; IIT Mandi North Campus</span>
+                            <br>
+                            <span><span style="color: #007fff;">Email</span>:&nbsp; Lakshaynailwal@gmail.com</span>
+                            <br>
+                            <span><span style="color: #007fff;">Phone</span>:&nbsp; +91 7838131836</span>
+                        </div>
+
                     </div>
 
                     <br>
@@ -58,34 +88,34 @@
                             <h5 class="text-uppercase fw-bold mb-4">
                                 Services
                             </h5>
-                            <span>
-                                <a href="/#blog" class="text-reset">Blog Posts</a>
-                            </span>
-                            <span>
-                                <a href="/#website" class="text-reset">Website Content</a>
-                            </span>
-                            <span>
-                                <a href="/#tech" class="text-reset">Technical Writing</a>
-                            </span>
-                            <span>
-                                <a href="/#press" class="text-reset">Press Releases</a>
-                            </span>
-                            <span>
-                                <a href="/#copy" class="text-reset">Copy Writing</a>
-                            </span>
-                            <span>
-                                <a href="/#ebook" class="text-reset">Ebook Writing</a>
-                            </span>
-                            <span>
-                                <a href="/#white" class="text-reset">White Papers</a>
-                            </span>
-                            <span>
-                                <a href="/#email" class="text-reset">Email Newsletter</a>
-                            </span>
-                            <span>
-                                <a href="/#product" class="text-reset">Product Description</a>
-                            </span>
-                            
+
+                                <span>
+                                    <a href="/#blog" class="text-reset">Blog Posts</a>
+                                </span>
+                                <span>
+                                    <a href="/#website" class="text-reset">Website Content</a>
+                                </span>
+                                <span>
+                                    <a href="/#tech" class="text-reset">Technical Writing</a>
+                                </span>
+                                <span>
+                                    <a href="/#press" class="text-reset">Press Releases</a>
+                                </span>
+                                <span>
+                                    <a href="/#copy" class="text-reset">Copy Writing</a>
+                                </span>
+                                <span>
+                                    <a href="/#ebook" class="text-reset">Ebook Writing</a>
+                                </span>
+                                <span>
+                                    <a href="/#white" class="text-reset">White Papers</a>
+                                </span>
+                                <span>
+                                    <a href="/#email" class="text-reset">Email Newsletter</a>
+                                </span>
+                                <span>
+                                    <a href="/#product" class="text-reset">Product Description</a>
+                                </span>
                             
                         </div>
                     </div>
@@ -108,41 +138,13 @@
 
     </section>
 
-    <section class="d-flex align-items-center justify-content-center justify-content-lg-between p-4 border-bottom">
-        <!-- Left -->
-        <div class="me-5 d-none d-lg-block">
-            <span>Get connected with us on social networks:</span>
-        </div>
-        <!-- Left -->
-
-        <!-- Right -->
-        <div class="social">
-            <a href="#" class="me-4 link-secondary">
-                <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="#" class="me-4 link-secondary">
-                <i class="fab fa-twitter"></i>
-            </a>
-            <a href="#" class="me-4 link-secondary">
-                <i class="fab fa-google"></i>
-            </a>
-            <a href="#" class="me-4 link-secondary">
-                <i class="fab fa-instagram"></i>
-            </a>
-            <a href="#" class="me-4 link-secondary">
-                <i class="fab fa-linkedin"></i>
-            </a>
-            <a href="#" class="me-4 link-secondary">
-                <i class="fab fa-github"></i>
-            </a>
-        </div>
-        <!-- Right -->
-    </section>
+    <!-- <section class="d-flex align-items-center justify-content-center justify-content-lg-between  border-bottom">
+    </section> -->
     <!-- Section: Links  -->
 
     <!-- Copyright -->
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
-        © 2021 Copyright: Company
+        © 2023 Copyright: Content Bazzaar
     </div>
     <!-- Copyright -->
 </footer>
