--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -232,9 +232,10 @@
             <h2>Contact Us</h2>
             <div class="mainbody">
                 <div class="left">
-                    <h1 class="leftin">Let's talk about everything!</h1>
-                    <span class="leftin para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae,
-                        ad.</span>
+                    <h1 class="leftin">Congratulations! 
+                        <br>
+                        You are at the right place</h1>
+                    <span class="leftin para">We are here to help you out with your queries. Let's get started in giving shape to your idea in the form of content.</span>
                     <img class="leftin image"
                         src="https://preview.colorlib.com/theme/bootstrap/contact-form-16/images/undraw-contact.svg"
                         alt="">
