--- a/templates/partials/footer.ejs
+++ b/templates/partials/footer.ejs
@@ -35,28 +35,25 @@
                                 <i class="fab fa-twitter"></i>
                             </a>
                             <a href="#" class="me-4 link-secondary">
-                                <i class="fab fa-google"></i>
-                            </a>
-                            <a href="#" class="me-4 link-secondary">
                                 <i class="fab fa-instagram"></i>
                             </a>
-                            <a href="#" class="me-4 link-secondary">
+                            <a href="https://www.linkedin.com/company/content-bazzaar/" target="_blank" class="me-4 link-secondary">
                                 <i class="fab fa-linkedin"></i>
                             </a>
-                            <a href="#" class="me-4 link-secondary">
+                            <a target="_blank" href="https://github.com/Lakshaynailwal/ContentWebpage" class="me-4 link-secondary">
                                 <i class="fab fa-github"></i>
                             </a>
                         </div>
 
                         <div class="contact">
                             <h5 class="text-uppercase fw-bold mt-4">
-                                Reach Us
+                                Reach out to us at
                             </h5>
-                            <span><span style="color: #007fff;">Address</span>:&nbsp; IIT Mandi North Campus</span>
-                            <br>
-                            <span><span style="color: #007fff;">Email</span>:&nbsp; Lakshaynailwal@gmail.com</span>
-                            <br>
-                            <span><span style="color: #007fff;">Phone</span>:&nbsp; +91 7838131836</span>
+                            <!-- <span><span style="color: #007fff;">Address</span>:&nbsp; IIT Mandi North Campus</span> -->
+                            <!-- <br> -->
+                            <span><span style="color: #007fff;">Email</span>:&nbsp;<a style="color: white; " target="_blank" href="mailto:info@contentbazzaar.com">info@contentbazzaar.com</a> </span>
+                            <!-- <br> -->
+                            <!-- <span><span style="color: #007fff;">Phone</span>:&nbsp; +91 7838131836</span> -->
                         </div>
 
                     </div>
@@ -73,10 +70,10 @@
                                 <a href="/" class="text-reset">Home</a>
                             </span>
                             <span>
-                                <a href="#" class="text-reset">About Us</a>
+                                <a href="/#about" class="text-reset">About Us</a>
                             </span>
                             <span>
-                                <a href="/contact" class="text-reset">Contact Us</a>
+                                <a href="/#contact" class="text-reset">Contact Us</a>
                             </span>
                             <span>
                                 <a href="/blog" class="text-reset">Blogs</a>
