--- a/static/css/showblog.css
+++ b/static/css/showblog.css
@@ -125,12 +125,12 @@ hr {
     margin: 10px 0px 30px 0px;
 }
 
-img {
+/* img {
     object-fit: cover;
     object-position: center, center;
     width: 100%;
     height: 100%;
-}
+} */
 
 .btn-danger {
     background-color: red !important;
